--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ input:required {
   width: 40px;
   height: 40px;
   bottom: 40px;
-  background-color: #df42b1;
+  background-color: #55C1AA;
   color: #ffffff;
   text-align: center;
   -webkit-transition-duration: 500ms;
