--- a/style.css
+++ b/style.css
@@ -2867,32 +2867,32 @@ input:required {
       .call-to-action-content .event-time p i {
         margin-right: 3px; }
 
-        #devfolio-apply-now {
-          -ms-flex-align: center;
-          -webkit-box-align: center;
-          align-items: center;
-          background-color: #233452;
-          border-radius: 3px;
-          border: none;
-          color: #FFFFFF;
-          cursor: pointer;
-          display: -ms-flexbox;
-          display: -webkit-box;
-          display: flex;
-          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-          font-size: 18px;
-          font-weight: 600;
-          padding: 12px 20px;
-          text-align: center;
-          text-transform: lowercase;
-      }
-      
-      #devfolio-apply-now:not([disabled]) {
-          cursor: pointer;
-      }
-      
-      #devfolio-apply-now:hover {
-          background-color: #55C1AA !important;
-      }
+#devfolio-apply-now {
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: #3770FF;
+  border-radius: 3px;
+  border: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 18px;
+  font-weight: 600;
+  padding: 12px 20px;
+  text-align: center;
+  text-transform: lowercase;
+}
+
+#devfolio-apply-now:not([disabled]) {
+    cursor: pointer;
+}
+
+#devfolio-apply-now:hover {
+    background-color: #2954BF !important;
+}
 
 /*# sourceMappingURL=style.css.map */
