Add lowercase styling on button

--- a/style.css
+++ b/style.css
@@ -2884,7 +2884,7 @@ input:required {
   font-weight: 600;
   padding: 12px 20px;
   text-align: center;
-  text-transform: lowercase;
+  text-transform: lowercase !important;
 }
 
 #devfolio-apply-now:not([disabled]) {
