--- a/style.css
+++ b/style.css
@@ -2691,7 +2691,9 @@ input:required {
     -ms-flex-pack: center;
     justify-content: center;
     margin-left: -1px;
-    margin-top: -1px; }
+    margin-top: -1px; 
+    margin-right: 5%;
+  }
     @media only screen and (min-width: 992px) and (max-width: 1199px) {
       .our-sponsor-area .single-sponsor {
         height: 200px; } }
