--- a/style.css
+++ b/style.css
@@ -2897,4 +2897,8 @@ input:required {
     background-color: #2954BF !important;
 }
 
+svg path {
+  fill: #fff !important;
+}
+
 /*# sourceMappingURL=style.css.map */
