--- a/style.css
+++ b/style.css
@@ -1327,10 +1327,10 @@ input:required {
     margin: auto;
     height: 115px;
     width: 115px;
-    background: #c63fa4;
-    background-image: -moz-linear-gradient(120deg, #df42b1 0%, #505add 100%);
-    background-image: -webkit-linear-gradient(120deg, #df42b1 0%, #505add 100%);
-    background-image: -ms-linear-gradient(120deg, #df42b1 0%, #505add 100%);
+    background: #42dfa3;
+    background-image: -moz-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
+    background-image: -webkit-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
+    background-image: -ms-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
     border-radius: 50%;
     line-height: 115px; }
     .single-we-offer-content .offer-icon::after {
@@ -1347,11 +1347,11 @@ input:required {
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      background: #c63fa4;
-      background-image: -moz-linear-gradient(120deg, #df42b1 0%, #505add 100%);
-      background-image: -webkit-linear-gradient(120deg, #df42b1 0%, #505add 100%);
-      background-image: -ms-linear-gradient(120deg, #df42b1 0%, #505add 100%);
-      z-index: -10; }
+      background: #42dfa3;
+      background-image: -moz-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
+      background-image: -webkit-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
+      background-image: -ms-linear-gradient(120deg, #42dfa3 0%, #505add 100%);
+        z-index: -10; }
   .single-we-offer-content h5 {
     -webkit-transition-duration: 1000ms;
     -o-transition-duration: 1000ms;
@@ -1369,6 +1369,7 @@ input:required {
     margin-bottom: 0;
     position: relative;
     z-index: 2; }
+  .single-we-offer-content:hover {transform: scale(1.1);}
   .single-we-offer-content:hover h5,
   .single-we-offer-content:hover p, .single-we-offer-content:focus h5,
   .single-we-offer-content:focus p {
