--- a/style.css
+++ b/style.css
@@ -1527,7 +1527,7 @@ input:required {
     top: -180px;
     right: 0;
     z-index: 22;
-    background-color: #df42b1;
+    background-color: #233452;
     padding: 15px;
     border-radius: 0 10px 0 10px;
     text-align: center;
@@ -1547,11 +1547,12 @@ input:required {
     left: 25px;
     z-index: 22; }
     .single-speaker-area .speaker-info h5 {
-      font-size: 20px;
+      font-size: 15px;
       font-weight: 500;
       color: #ffffff;
       letter-spacing: 1px;
-      margin-bottom: 10px; }
+      margin-bottom: 0px;
+     }
     .single-speaker-area .speaker-info p {
       color: #df42b1;
       margin-bottom: 0;
