complete testimonial section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,5 +79,6 @@ Last Update: March 14, 2019
 @import "schedule";
 @import "ticket";
 @import "sponsor";
+@import "testimonial";
 @import "contact";
 @import "cta";
